# baidu-image-crawler

./: .env.example  .gitignore  API_STATUS.md  HARNESS_SUMMARY.md  KNOWN_ISSUES.md  OPTIMIZATION.md  PROJECT.md  README.md  SECURITY_RULES.md  STRUCTURE.md  TASKS.md  gui.py  main.py  pyproject.toml  requirements.txt
config/: __init__.py  constants.py  settings.py
core/: __init__.py  crawler.py  downloader.py  html_parser.py  protocols.py  thread_pool.py  unified_crawler.py  url_builder.py
core/sources/: __init__.py  baidu.py  base.py  bing.py  so360.py  sogou.py
storage/: __init__.py  logger.py  state_manager.py
utils/: __init__.py  security.py  validator.py
